syntax = "proto2";

package UserProto;

option java_package = "cool.qun.estate.backend.protocol.user";

import "Resource.proto";
import "WebpbOptions.proto";

enum GenderPb {
    MALE = 1;
    FEMALE = 2;
}

message UserPb {
    required int64 id = 1 [(ts_string) = true, (java_anno) = '@JsonSerialize(using = ToStringSerializer.class)'];
    required string nickname = 2;
    required string avatar = 3;
    required int32 gender = 4;
    required int64 created = 5;
}

message UserMpLoginRequest {
    option (method) = 'POST';

    option (path) = '/api/mp/user/login';

    required string appId = 1 [(java_anno) = '@NotEmpty'];
    required string code = 2 [(java_anno) = '@NotEmpty'];
}

message UserMpLoginResponse {
    required int64 id = 1 [(ts_string) = true];
    required string token = 2;
}

message HelloRequest {
    option (method) = 'GET';

    option (path) = '/api/hello';
}

message HelloResponse {
    required string message = 1;
}
